@@ -17,6 +17,7 @@
 10. Show changes in plugin info dialog.
 11. Press, not long-press, on queue nav whilst in queue view scrolls to
     current.
+12. Adjust now-playing landscape text size.
 
 1.7.1
 -----
